# IMAGE-PROCESSING

./: CmakeLists.txt  build.sh
include/: convert_dataset.hpp  serialize.hpp
src/: CmakeLists.txt  convert_dataset.cpp  main.cpp  serialize.cpp
tests/: CMakeLists.txt  test_convert_dataset.cpp  test_main.cpp  test_serialize.cpp
